# rev

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  nav_app.wasm
Services/rovelstars.files/: indexer.rsc.rsc
benchmarks/: Cargo.toml  README.md
benchmarks/src/: lib.rs  timing.rs  wirebus.rs
src/: auth.rs  main.rs
src/bus/: activation.rs  lanes.rs  mod.rs  policy.rs  protocol.rs  registry.rs  server.rs
src/cli/: dir_rule.rs  mod.rs  parse_service.rs
src/cli/commands/: create.rs  install.rs  mod.rs  read.rs  service_client.rs  start.rs  stop.rs
src/dashboard/: mod.rs
src/init/: console.rs  mod.rs  mounts.rs  ordering.rs  server.rs  services.rs
src/logger/: mod.rs
src/parser/: mod.rs
src/seat/: fd_passing.rs  mod.rs
src/service/: mod.rs  scheduler.rs  stop.rs
src/session/: mod.rs
