[package]
name = "rev"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
cgroups-rs = { version = "0.5.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
croner = { version = "3.0.1", features = ["serde"] }
crossterm = "0.29.0"
libc = "0.2.177"
nix = { version = "0.30.1", features = ["fs", "process"] }
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.3.18"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
walkdir = "2.5.0"
